QuizGenerator/.antlr/QuizGeneratorParser.java
// Generated from /home/tabuas/Desktop/uni/lfa/Projeto2020/lfa1920-g01/QuizGenerator/QuizGenerator.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuizGeneratorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, NUM=48, ID=49, WORD=50, WS=51, COMMENT=52;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_forBlock = 2, RULE_endf = 3, RULE_ifBlock = 4, 
		RULE_other = 5, RULE_instructions = 6, RULE_createQuestion = 7, RULE_assignment = 8, 
		RULE_declaration = 9, RULE_attribution = 10, RULE_expr = 11, RULE_type = 12, 
		RULE_bdAttribution = 13, RULE_questionType = 14, RULE_questionDeclaration = 15, 
		RULE_questionAttribution = 16, RULE_command = 17, RULE_mathExpr = 18, 
		RULE_randMethod = 19, RULE_testType = 20, RULE_difficulty = 21;
	public static final String[] ruleNames = {
		"program", "stat", "forBlock", "endf", "ifBlock", "other", "instructions", 
		"createQuestion", "assignment", "declaration", "attribution", "expr", 
		"type", "bdAttribution", "questionType", "questionDeclaration", "questionAttribution", 
		"command", "mathExpr", "randMethod", "testType", "difficulty"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Begin'", "'create'", "'endcreate'", "';'", "'for'", "'in'", "':'", 
		"'endfor'", "'if'", "'('", "'=='", "'.correctAnswer()'", "')'", "'endif'", 
		"'else'", "'Question'", "'.text'", "'='", "'.theme'", "'.difficulty'", 
		"'.answer'", "','", "'.name'", "'[]'", "'['", "']'", "'String'", "'int'", 
		"'double'", "'DB'", "'load'", "'.get'", "'answersMode'", "'.add'", "'rand'", 
		"'.numAnswers'", "'print'", "'*'", "'/'", "'+'", "'-'", "'.answers()'", 
		"'multipleChoice'", "'trueOrFalse'", "'easy'", "'medium'", "'hard'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"NUM", "ID", "WORD", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuizGenerator.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuizGeneratorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public TerminalNode EOF() { return getToken(QuizGeneratorParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(T__0);
			setState(45);
			match(T__1);
			setState(46);
			match(ID);
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__15) | (1L << T__23) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__32) | (1L << T__34) | (1L << T__36) | (1L << ID))) != 0)) {
				{
				{
				setState(47);
				stat();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			match(T__2);
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStatContext extends StatContext {
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public IfStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class InstStatContext extends StatContext {
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public InstStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class ForStatContext extends StatContext {
		public ForBlockContext forBlock() {
			return getRuleContext(ForBlockContext.class,0);
		}
		public ForStatContext(StatContext ctx) { copyFrom(ctx); }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
			case T__23:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__32:
			case T__34:
			case T__36:
			case ID:
				_localctx = new InstStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				instructions();
				setState(57);
				match(T__3);
				}
				break;
			case T__4:
				_localctx = new ForStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				forBlock();
				}
				break;
			case T__8:
				_localctx = new IfStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				ifBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForBlockContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(QuizGeneratorParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(QuizGeneratorParser.ID, i);
		}
		public EndfContext endf() {
			return getRuleContext(EndfContext.class,0);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ForBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forBlock; }
	}

	public final ForBlockContext forBlock() throws RecognitionException {
		ForBlockContext _localctx = new ForBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_forBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__4);
			setState(64);
			match(ID);
			setState(65);
			match(T__5);
			setState(66);
			match(ID);
			setState(67);
			match(T__6);
			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				stat();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__15) | (1L << T__23) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__32) | (1L << T__34) | (1L << T__36) | (1L << ID))) != 0) );
			setState(73);
			endf();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndfContext extends ParserRuleContext {
		public EndfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endf; }
	}

	public final EndfContext endf() throws RecognitionException {
		EndfContext _localctx = new EndfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_endf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfBlockContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(QuizGeneratorParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(QuizGeneratorParser.ID, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public OtherContext other() {
			return getRuleContext(OtherContext.class,0);
		}
		public IfBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifBlock; }
	}

	public final IfBlockContext ifBlock() throws RecognitionException {
		IfBlockContext _localctx = new IfBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__8);
			setState(78);
			match(T__9);
			setState(79);
			match(ID);
			setState(80);
			match(T__10);
			setState(81);
			match(ID);
			setState(82);
			match(T__11);
			setState(83);
			match(T__12);
			setState(84);
			match(T__6);
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85);
				stat();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__15) | (1L << T__23) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__32) | (1L << T__34) | (1L << T__36) | (1L << ID))) != 0) );
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(90);
				other();
				}
			}

			setState(93);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public OtherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other; }
	}

	public final OtherContext other() throws RecognitionException {
		OtherContext _localctx = new OtherContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_other);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__14);
			setState(96);
			match(T__6);
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				stat();
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__15) | (1L << T__23) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__32) | (1L << T__34) | (1L << T__36) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
	 
		public InstructionsContext() { }
		public void copyFrom(InstructionsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CommandInstContext extends InstructionsContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public CommandInstContext(InstructionsContext ctx) { copyFrom(ctx); }
	}
	public static class AssignInstContext extends InstructionsContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignInstContext(InstructionsContext ctx) { copyFrom(ctx); }
	}
	public static class QuestInstContext extends InstructionsContext {
		public CreateQuestionContext createQuestion() {
			return getRuleContext(CreateQuestionContext.class,0);
		}
		public QuestInstContext(InstructionsContext ctx) { copyFrom(ctx); }
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instructions);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AssignInstContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				assignment();
				}
				break;
			case 2:
				_localctx = new CommandInstContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				command();
				}
				break;
			case 3:
				_localctx = new QuestInstContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				createQuestion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateQuestionContext extends ParserRuleContext {
		public CreateQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createQuestion; }
	 
		public CreateQuestionContext() { }
		public void copyFrom(CreateQuestionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CreateQuestionThemeContext extends CreateQuestionContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public TerminalNode WORD() { return getToken(QuizGeneratorParser.WORD, 0); }
		public CreateQuestionThemeContext(CreateQuestionContext ctx) { copyFrom(ctx); }
	}
	public static class CreateQuestionAnswerContext extends CreateQuestionContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public TerminalNode WORD() { return getToken(QuizGeneratorParser.WORD, 0); }
		public TerminalNode NUM() { return getToken(QuizGeneratorParser.NUM, 0); }
		public CreateQuestionAnswerContext(CreateQuestionContext ctx) { copyFrom(ctx); }
	}
	public static class CreateQuestionDifficultyContext extends CreateQuestionContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public DifficultyContext difficulty() {
			return getRuleContext(DifficultyContext.class,0);
		}
		public CreateQuestionDifficultyContext(CreateQuestionContext ctx) { copyFrom(ctx); }
	}
	public static class CreateQuestionphraseContext extends CreateQuestionContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public TerminalNode WORD() { return getToken(QuizGeneratorParser.WORD, 0); }
		public CreateQuestionphraseContext(CreateQuestionContext ctx) { copyFrom(ctx); }
	}
	public static class CreateQuestionNameContext extends CreateQuestionContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public TerminalNode WORD() { return getToken(QuizGeneratorParser.WORD, 0); }
		public CreateQuestionNameContext(CreateQuestionContext ctx) { copyFrom(ctx); }
	}

	public final CreateQuestionContext createQuestion() throws RecognitionException {
		CreateQuestionContext _localctx = new CreateQuestionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_createQuestion);
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new CreateQuestionphraseContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				match(T__15);
				setState(108);
				match(ID);
				setState(109);
				match(T__16);
				setState(110);
				match(T__17);
				setState(111);
				match(WORD);
				}
				break;
			case 2:
				_localctx = new CreateQuestionThemeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(ID);
				setState(113);
				match(T__18);
				setState(114);
				match(T__17);
				setState(115);
				match(WORD);
				}
				break;
			case 3:
				_localctx = new CreateQuestionDifficultyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(ID);
				setState(117);
				match(T__19);
				setState(118);
				match(T__17);
				setState(119);
				difficulty();
				}
				break;
			case 4:
				_localctx = new CreateQuestionAnswerContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				match(ID);
				setState(121);
				match(T__20);
				setState(122);
				match(T__9);
				setState(123);
				match(WORD);
				setState(124);
				match(T__21);
				setState(125);
				match(NUM);
				setState(126);
				match(T__12);
				}
				break;
			case 5:
				_localctx = new CreateQuestionNameContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				match(ID);
				setState(128);
				match(T__22);
				setState(129);
				match(T__17);
				setState(130);
				match(WORD);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarAssignContext extends AssignmentContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarAssignContext(AssignmentContext ctx) { copyFrom(ctx); }
	}
	public static class QuestDeclarAssignContext extends AssignmentContext {
		public QuestionDeclarationContext questionDeclaration() {
			return getRuleContext(QuestionDeclarationContext.class,0);
		}
		public QuestDeclarAssignContext(AssignmentContext ctx) { copyFrom(ctx); }
	}
	public static class QuestAttribAssignContext extends AssignmentContext {
		public QuestionAttributionContext questionAttribution() {
			return getRuleContext(QuestionAttributionContext.class,0);
		}
		public QuestAttribAssignContext(AssignmentContext ctx) { copyFrom(ctx); }
	}
	public static class AttribAssignContext extends AssignmentContext {
		public AttributionContext attribution() {
			return getRuleContext(AttributionContext.class,0);
		}
		public AttribAssignContext(AssignmentContext ctx) { copyFrom(ctx); }
	}
	public static class BdAttribAssignContext extends AssignmentContext {
		public BdAttributionContext bdAttribution() {
			return getRuleContext(BdAttributionContext.class,0);
		}
		public BdAttribAssignContext(AssignmentContext ctx) { copyFrom(ctx); }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new DeclarAssignContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				declaration();
				}
				break;
			case 2:
				_localctx = new AttribAssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				attribution();
				}
				break;
			case 3:
				_localctx = new QuestDeclarAssignContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				questionDeclaration();
				}
				break;
			case 4:
				_localctx = new QuestAttribAssignContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				questionAttribution();
				}
				break;
			case 5:
				_localctx = new BdAttribAssignContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				bdAttribution();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarArrayContext extends DeclarationContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public DeclarArrayContext(DeclarationContext ctx) { copyFrom(ctx); }
	}
	public static class DeclarVarContext extends DeclarationContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public DeclarVarContext(DeclarationContext ctx) { copyFrom(ctx); }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaration);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new DeclarVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				type();
				setState(141);
				match(ID);
				}
				break;
			case 2:
				_localctx = new DeclarArrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				type();
				setState(144);
				match(T__23);
				setState(145);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributionContext extends ParserRuleContext {
		public AttributionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribution; }
	 
		public AttributionContext() { }
		public void copyFrom(AttributionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AttribArrayContext extends AttributionContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AttribArrayContext(AttributionContext ctx) { copyFrom(ctx); }
	}
	public static class AttribVarContext extends AttributionContext {
		public TerminalNode ID() { return getToken(QuizGeneratorParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public AttribVarContext(AttributionContext ctx) { copyFrom(ctx); }
	}

	public final AttributionContext attribution() throws RecognitionException {
		AttributionContext _localctx = new AttributionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attribution);
		int _la;
		try {
			int _alt;
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new AttribVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__26) | (1L << T__27) | (1L << T__28))) != 0)) {
					{
					setState(149);
					type();
					}
				}

				setState(152);
				match(ID);
				setState(153);
				match(T__17);
				setState(154);
				expr();
				}
				break;
			case 2:
				_localctx = new AttribArrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__26) | (1L << T__27) | (1L << T__28))) != 0)) {
					{
					setState(155);
					type();
					}
				}

				setState(158);
				match(T__23);
				setState(159);
				match(ID);
				setState(160);
				match(T__17);
				setState(161);
				match(T__24);
				setState(167);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(162);
						expr();
						setState(163);
						match(T__21);
						}
						} 
					}
					setState(169);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(170);
				expr();
				setState(171);
				match(T__25);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WordExprContext extends ExprContext {
		public TerminalNode WORD() { return getToken(QuizGeneratorParser.WORD, 0); }
		public WordExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class MathContext extends ExprContext {
		public MathExprContext mathExpr() {
			return getRuleContext(MathExprContext.class,0);
		}
		public MathContext(ExprContext ctx) { copyFrom(ctx); }
	}
